# Angets

./: HISTORY.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: publish.yaml  tests.yaml
src/angets/: __init__.py  _core.py
src/ankhas_greens/angets/: _core.py  _decorators.py  _defaults.py  _exceptions.py  _helpers.py
src/ankhas_greens/gets/: __init__.py  _core.py  _decorators.py  _helpers.py  _settings.py  decorators.py  errors.py  exceptions.py  gets.py  helpers.py  settings.py
stubs/: _core.pyi
tests/: test_angets.py  tests.py
