[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
angets = "py.typed"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true

[project]
name = "angets"
version = "0.0.3"
authors = [
    { name = "Ankhbold Batbaatar", email = "ankhbhold@gmail.com" },
]
description = "Angets (Ankha's Gets): Functions for user input."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FirstlyBoldly/Angets"
Issues = "https://github.com/FirstlyBoldly/Angets/issues"
